11/11: Just to clarify what I would like for the exam: please print out the exam and write the answers to each problem on the printout.  If you can fit your work onto the printout as well, that's fine; otherwise, show your work on a separate attached page, and then write the answer on the printout.  (If the answer is correct I won't need to refer to the work, which will save me time.)
11/10: The [Exam2.pdf exam] is now available.  I've labelled it "v1" in case I need to make any corrections and release a new version.  Please let me know if you have any questions or problems.  The exam is due next Friday the 18th in class.
11/9: I was going to finish writing your exam last night but...well, last night happened.  Rather than rush through it today, I'm going to post it tomorrow.  You'll still have a week to complete it.
11/7: Barring total failure on my part, I will hand out Exam 2 on Wednesday of this week, and it will be due the following Wednesday.  (You will get a week to do it, regardless.)
11/5: I've uploaded an [Exam2Outline.pdf outline] for Exam 2.
10/31: You might be interested in reading about [https://en.wikipedia.org/wiki/Perpetual_motion Perpetual motion machines] and some of the methods that have been proposed to skirt the laws of physics.
10/28: Here's my [http://physics.nfshost.com/3410/Diffusion/index.html diffusion demo] from class today, if you want to play with it. 
10/20: (2:55pm) Two small updates: 1) the figure in the solutions to HW7 was incorrect; I had the wavelength increasing in the wrong direction.  2) Problem 1 in HW8 is Harris 5.34, not 5.31.  And it's a 50eV electron, meaning an electron with 50eV total energy (not including rest energy--no relativity here!)
10/12: [HW7.pdf Homework 7] is now available.
10/5: The first exam and its solutions are now available online, under the Exams tab.  Feel free to ignore until after the break, if that sort of thing makes you nervous.  Enjoy your break!