@@ -75,6 +75,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 11/12:</DIV>
+ I've had to remove the audio files from some of the earlier classes, to make space on my webhost.  If you need any of them, let me know.
+<li>
 <DIV class="updated">Posted 11/11:</DIV>
  Just to clarify what I would like for the exam: please print out the exam and write the answers to each problem on the printout.  If you can fit your work onto the printout as well, that's fine; otherwise, show your work on a separate attached page, and then write the answer on the printout.  (If the answer is correct I won't need to refer to the work, which will save me time.)
 <li>
@@ -294,13 +297,13 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 	<BR>&nbsp;
 	<TD>
 	<A HREF="Repository/M6.pdf">written</A><BR>
-	<A HREF="Repository/M6.mp3">audio</A>
+	&nbsp;
 <TD>
 	<A HREF="Repository/W6.pdf">written</A><BR>
-	<A HREF="Repository/W6.mp3">audio</A>
+	&nbsp;
 <TD>
 	<A HREF="Repository/F6.pdf">written</A><BR>
-	<A HREF="Repository/F6.mp3">audio</A>
+	&nbsp;
 <TR><TD class="weeknumber">5
 <TD class="date">9/19
 <TD class="topic">Matter as Waves	<TD class="chapter">4
@@ -314,10 +317,10 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 	&nbsp;
 <TD>
 	<A HREF="Repository/W5.pdf">written</A><BR>
-	<A HREF="Repository/W5.mp3">audio</A>
+	&nbsp;
 <TD>
 	<A HREF="Repository/F5.pdf">written</A><BR>
-	<A HREF="Repository/F5.mp3">audio</A>
+	&nbsp;
 <TR><TD class="weeknumber">4
 <TD class="date">9/12
 <TD class="topic">Light as Particles	<TD class="chapter">3
@@ -328,13 +331,13 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 	<BR>&nbsp;
 	<TD>
 	<A HREF="Repository/M4.pdf">written</A><BR>
-	<A HREF="Repository/M4.mp3">audio</A>
+	&nbsp;
 <TD>
 	<A HREF="Repository/W4.pdf">written</A><BR>
-	<A HREF="Repository/W4.mp3">audio</A>
+	&nbsp;
 <TD>
 	<A HREF="Repository/F4.pdf">written</A><BR>
-	<A HREF="Repository/F4.mp3">audio</A>
+	&nbsp;
 <TR><TD class="weeknumber">3
 <TD class="date">9/5
 <TD class="topic">General Relativity	<TD class="chapter">2
