@@ -1,3 +1,4 @@
+11/12: I've had to remove the audio files from some of the earlier classes, to make space on my webhost.  If you need any of them, let me know.
 11/11: Just to clarify what I would like for the exam: please print out the exam and write the answers to each problem on the printout.  If you can fit your work onto the printout as well, that's fine; otherwise, show your work on a separate attached page, and then write the answer on the printout.  (If the answer is correct I won't need to refer to the work, which will save me time.)
 11/10: The [Exam2.pdf exam] is now available.  I've labelled it "v1" in case I need to make any corrections and release a new version.  Please let me know if you have any questions or problems.  The exam is due next Friday the 18th in class.
 11/9: I was going to finish writing your exam last night but...well, last night happened.  Rather than rush through it today, I'm going to post it tomorrow.  You'll still have a week to complete it.
